Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17314

Search highlight is not always rendered

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 4.2.0
    • Qt Creator 4.2.0-beta1
    • Editors
    • None
    • Kubuntu 16.10, x86_64, Nvidia drivers 370.28. Clang code model enabled.
    • c8215d4b6e7cb932af9f7b201f83d254f965423c

    Description

      Sometimes, when searching for text is active, some of the instances of the found text are not fully highlighted - only the yellow box around the text is visible, while the background of the test is not highlighted. See the attached screenshot - two of the found instances of "prev_end_pos" on lines 182 and 185 are not properly highlighted.

      I don't know the exact criteria for the text to be not highlighted, but it seems like the problem is stable (i.e. cancelling the search and searching for the same text again yields the same result). This is not a low level drawing issue - scrolling the text off the screen and back again does not fix the background.

      I expect the highlighting to be reliable as I often use it during code editing. Missing highlighlting makes it easy to miss an instance that needs to be edited.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            lastique Andrey Semashev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes