Editor: Fix search result backgound for declarations

Don't add a background to a format without a background
if a mixin is applied.

Task-number: QTCREATORBUG-17314
Change-Id: Ie76fe7f69e98e9cfdfa290c40f0774dbe6f86cea
Reviewed-by: Marco Bubke <marco.bubke@qt.io>